<resources>
    <string name="app_name">My Application</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="Bookmark">Bookmark</string>
    <string name="SeeReviews">Check Reviews</string>
    <string name="ApplyViaURL">Apply Via Company Link</string>
    <string name="ApplyViaHrEmail">Apply Via Email</string>
    <string name="ShareURL">Share Company Link</string>

    <string name="shareurl">Please see the Company URL for your reference : </string>
    <string name="emailapplication">Dear Hiring manager, I came across a very exciting position on your job portal that I believe fits me perfectly. I am interested in applying for the position of <b>%1$s</b> at <b>%2$s</b>. I would love to talk to you in more detail regarding this amazing opportunity at your company. It would give me great pleasure to hear back from you regarding my application.

         \n\n=========Applicant Information=========\n
         Name: <b>%3$s</b> <b>%4$s</b>\n
         Gender: <b>%5$s</b>\n
         Email: <b>%6$s</b>\n
         Contact No: <b>%7$s</b>\n
         Resume URL: <b>%8$s</b>\n
         Introduction: <b>%9$s</b>\n
         \n\n Thank you !\n
         Kind Regards,\n
         ASD Job Portal On Behalf of  <b>%10$s</b> <b>%11$s</b>\n  </string>


    <string name="FilterByCompany">Filter by Company</string>
    <string name="AddingReviewText">Adding review for</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Sign Up</string>

    <string name="Email">Email:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="Avatar">Avatar:</string>
    <string name="gender">Gender:</string>
    <string name="resume">Resume:</string>
    <string name="contactNumber">Phone Number:</string>

    <string name="dummy_qualification">Good communication skills, good working attitude, highly motivated, multitasking, resourceful &amp; responsible towards works.
Proficient in computer skills such as Microsoft words, excel
Candidate that can start immediately will be preferred
</string>
    <string name="dummy_description">Perform reception duties such as attending to walk-in guests, answering, screening, taking messages and forwarding incoming phone calls
Perform basic bookkeeping and data entry duties
Provide administrative support when required
Filling &amp; other administrative duties as assigned</string>
    <string name="loginstatus">Already have an account?<font fgcolor='#3C82FF'><u>  Login</u></font></string>
    <string name="chat_status">enable chating</string>

</resources>